--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@notionhq/client": "^3.1.3",
     "axios": "^1.9.0",
     "cheerio": "^1.1.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "puppeteer": "^24.10.1"
   }
 }
