--- a/package.json
+++ b/package.json
@@ -2,19 +2,27 @@
   "name": "google-search",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "build": "npx tsc -p .",
+    "test": "npm run build && node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.13.1",
     "@notionhq/client": "^3.1.3",
     "axios": "^1.9.0",
     "cheerio": "^1.1.0",
     "dotenv": "^16.5.0",
-    "puppeteer": "^24.10.1"
+    "puppeteer": "^24.10.1",
+    "zod": "^3.25.67"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.4",
+    "typescript": "^5.8.3"
   }
 }
